--- a/Frontend/src/Final/final.css
+++ b/Frontend/src/Final/final.css
@@ -1,6 +1,7 @@
 .final-container {
   background-color: #081c29;
   padding-bottom: 6rem;
+  padding-top: 15rem;
 }
 .final-textbox {
   padding-left: 5rem;
