--- a/Frontend/src/App/App.css
+++ b/Frontend/src/App/App.css
@@ -3,13 +3,19 @@
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #081c29;
-}
+  position: relative;
+  z-index: 0;}
 
 .text-container {
+  position: absolute;
+  display:flex;
+  flex-direction: column;
+  position: relative;
   text-align: start;
   width: 65%;
   padding: 20px;
+  padding-right: 20rem;
+  z-index: 999;
 }
 
 .app-head {
@@ -22,6 +28,7 @@
   word-spacing: 1px;
   font-size: 1.2rem;
   color: #ffffff;
+  mix-blend-mode: multiply;
 }
 
 .main-logo {
@@ -31,4 +38,28 @@
   padding-left: 0;
   padding-top: 0;
   height: auto;
+}
+.video-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 20%; /* Adjust height as needed */
+  z-index: 1;
+  background-color: rgba(0, 0, 139, 0.7); /* Dark blue color with some transparency */
+}
+.app-logo {
+  width: 100px; /* Adjust width as needed */
+  height: 100px; /* Adjust height as needed */
+  background-size: cover; /* Ensure the image covers the entire area */
+  background-position: center; /* Center the background image */
+}
+video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
